--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ a {
     color: inherit;
     text-decoration: none;
     padding: 10px;
-    background: rgba(255,255,255,0.5);
+    background: rgba(255,255,255,0.2);
     text-shadow: -1px -1px 2px rgba(100,100,100,0.9);
     border-radius: 0.2em;
 
@@ -118,11 +118,6 @@ a {
     transition:         0.5s;
 }
 
-a:hover,
-a:focus {
-    background: rgba(255,255,255,1);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.5);
-}
 
 /*
     Because the main point behind the impress.js demo is to demo impress.js
@@ -181,6 +176,10 @@ a:focus {
 
 .small {
     font-size: 30px;
+}
+
+.very-small {
+    font-size: 20px;
 }
 
 .align-justify {
@@ -338,11 +337,11 @@ a:focus {
     right: 0;
     bottom: 30px;
 
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.6);
     color: #FFF;
     text-align: center;
 
-    font-size: 50px;
+    font-size: 20px;
     padding: 20px;
 
     z-index: 100;
